# sic

./: Containerfile  README.md  pyproject.toml
sic/: settings.py
sic/migrations/: 0001_initial.py
